CSS font style changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../images/dark-honeycomb.png");
-    color: white;
+    color: #dddddd;
     font-family: 'Press Start 2P', cursive;
     font-size: 12px;
 }
