JS 'should have committed earlier' set up: random number and on(click) functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,9 @@ body {
     font-size: 12px;
 }
 
-.buttonStyle {
+.rupeeStyle {
     background-image: url("../images/dark-honeycomb.png");
     border: none;
-    
 }
 
 h1 {
